assests/home-page/css/styles.css
/* ... */
/* medium nav layout --------------------------------------------------------*/
@media (max-width: 954px) {
    nav .navbar {
        max-width: 100%;
    }

    nav .navbar .nav-links .links .sub-menu{
        background: var(--nav-bg-lg-layout); 
    }

    .links > li > a::before {
        right: 45%;
    }
}

/* sm nx layout (sidebar)--------------------------------------------------------*/
@media (max-width: 800px) {

    .navbar{
        background-color: var(--nav-bg-sm-layout);
    }

    /* sidebar nav --------------------------------------------------------*/
    nav .navbar .nav-links {
        display: block;
        position: fixed;
        background-color: var(--nav-bg-sm-layout);
        top: 0;
        left: -100%;
        max-width: 270px;
        width: 100%;
        padding: 20px;
        line-height: 40px;
        transition: all 0.5s ease; 
        backdrop-filter: blur(10px);
        z-index: 1000;
    }

    nav .navbar .logo-brand {
        width: fit-content;
    }
    
    nav .navbar .logo-brand a {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
    }

    /* sidebar logo brand --------------------------------------------------------*/
    .navbar .nav-links .sidebar-logo-brand {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    .nav-links .sidebar-logo-brand{
        border-bottom: 1px solid rgba(255, 255, 255, 0.5);
    }

    /* sidebar exit btn --------------------------------------------------------*/
    .nav-links .sidebar-logo-brand .exit-sidebar {
        display: block;
        color: #fff;
        font-size: 1rem;
        z-index: 2000;
    }


    /* sidebar menu--------------------------------------------------------*/
    
    .nav-links .sidebar-logo-brand .logo-brand-name{
        display: block;
        color: #fff;
        font-size: 25px;
        font-weight: 500;
    }

    .navbar .fa-bars {
        font-size: 1rem;
        display: block;
    }
    


    nav .navbar .nav-links .links {
        display: block;
        margin-top: 20px;
    }

    nav .navbar .nav-links .links li {
        display: block;
        
    }

    /* sidebar submenu--------------------------------------------------------*/
    nav .navbar .nav-links .links li .sub-menu {
        display: none;
        position: relative;
        top: 0;
        left: 0;
        box-shadow: none;
        background-color: rgba(0, 0, 0, 0);
    }

    nav .navbar .nav-links .links li .sub-menu li{
        border-bottom: none;
    }


    /* sidebar submenu's submenu--------------------------------------------------------*/
    nav .navbar .nav-links .links li:hover .branch-sub-menu,
    nav .navbar .nav-links .links li:hover .sub-menu .branch-4-sub-menu{
        display: none;
    }
    

    nav .navbar .nav-links .links li .sub-menu .branch-4-sub-menu{
        display: none;
        position: relative;
        left: 0;
    }

    nav .navbar .nav-links .links li .sub-menu .branch-4-sub-menu li{
        display: flex;
        justify-content: space-between;
        align-items: center;
    }

    nav .navbar .nav-links.show1 .links .sub-menu.branch-sub-menu{
        display: block;
    }
    nav .navbar .nav-links.show2 .links .branch-4 .sub-menu.branch-4-sub-menu{
        display: block;
    }
 branch-arrow
    /* sidebar all arrow--------------------------------------------------------*/
    nav .navbar .nav-links .links li .arrow {
        line-height: 40px;
    }

    nav .navbar .nav-links .links li:hover .branch-arrow,
    nav .navbar .nav-links .links li.branch-4:hover .branch-4-arrow{
        transform: rotate(0deg);
    }

    nav .navbar .nav-links.show1 .links li:hover .branch-arrow{
        transform: rotate(180deg)
    }
    nav .navbar .nav-links.show2 .links li.branch-4:hover .branch-4-arrow{
        transform: rotate(90deg);
    }

}





/* carousel styles------------------------- */
/* Main carousel */

.intro-carousel {
    width: 100vw;
    height: 100vh;
    position: relative;

}


.main-slide .item {
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    position: relative;
}

.main-slide .item iframe {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%,-50%);
    -moz-transform: translate(-50%,-50%);
    -webkit-transform: translate(-50%,-50%);
    z-index: -10;
}


.main-slide .item img {
    display: none;
}

.main-slide .item .slide-movie-text {
    width: 40%;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: 5%;
}

.main-slide .item .slide-movie-text h1,
.main-slide .item .slide-movie-text h6,
.main-slide .item .slide-movie-text p {
    margin-bottom: 0;
}

.main-slide .item .slide-movie-text .movie-name {
    text-transform: capitalize;
    margin-bottom: 4%;
}

.main-slide .item .slide-movie-text .movie-name h1 {
    font-size: 2rem;
    font-weight: 550;
}

.main-slide .item .slide-movie-text .movie-name h6 {
    font-size: 0.9rem;
}

.main-slide .item .slide-movie-text p {
    font-size: 0.8rem;
}

.main-slide .item .slide-movie-text .movie-category {
    margin-bottom: 2%;
}

.main-slide .item .slide-movie-text .movie-category p {
    margin-right: 2%;
    padding-left: 1%;
    padding-right: 1%;
    background: #0700cd60;
    border-radius: 5px;
}
.main-slide .item .slide-movie-text .movie-time  {
    margin-bottom: 2%;
}

.main-slide .item .slide-movie-text .movie-time p{
    padding-left: 1%;
    padding-right: 1%;
    width: max-content;
    background: #ae00cd60;
    border-radius: 5px;
}

.main-slide .item .slide-movie-text .movie-dir {
    display: block;
    margin-bottom: 2%;
}

.main-slide .item .slide-movie-text .movie-act {
    display: block;
    margin-bottom: 2%;
}

.main-slide .item .slide-movie-text .movie-content {
    margin-bottom: 2%;
}
/* ... */

